--- a/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
+++ b/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
@@ -10,6 +10,7 @@ use Yireo\LokiComponents\Util\Block\CssClass;
 /** @var CssClass $css */
 ?>
 <div class="<?= $css('') ?>">
+    HOSTED FIELDS
     <div>
         <div id="<?= $viewModel->getElementId() ?>-cc-name-wrapper"></div>
         <div id="<?= $viewModel->getElementId() ?>-cc-name-error"></div>
