WIP with Hosted Fields

--- a/view/frontend/templates/script/component/hosted-fields-component.phtml
+++ b/view/frontend/templates/script/component/hosted-fields-component.phtml
@@ -5,10 +5,11 @@
         Alpine.data('LokiCheckoutBuckarooHostedFields', () => ({
             ...LokiCheckoutComponentType,
             jwtToken: '',
+            allowedIssuers: [],
             async initHostedFields() {
                 buckarooHostedFieldsClient = new BuckarooHostedFieldsSdk.HFClient(this.jwtToken);
                 buckarooHostedFieldsClient.setLanguage('nl');
-                buckarooHostedFieldsClient.setSupportedServices(['MasterCard', 'Amex']);
+                buckarooHostedFieldsClient.setSupportedServices(this.allowedIssuers);
 
                 let options = {
                     id: this.elementId + "-cc-number",
