Major rewrite of namespaces

--- a/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
+++ b/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
@@ -2,8 +2,8 @@
 declare(strict_types=1);
 
 use Magento\Framework\View\Element\Template;
-use Yireo\LokiCheckoutBuckaroo\Component\HostedFields\HostedFieldsViewModel;
-use Yireo\LokiComponents\Util\Block\CssClass;
+use LokiCheckout\Buckaroo\Component\HostedFields\HostedFieldsViewModel;
+use Loki\Components\Util\Block\CssClass;
 
 /** @var HostedFieldsViewModel $viewModel */
 /** @var Template $block */
