--- a/view/frontend/layout/loki_checkout.xml
+++ b/view/frontend/layout/loki_checkout.xml
@@ -2,11 +2,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:View/Layout:etc/page_configuration.xsd">
     <body>
         <referenceContainer name="before.body.end">
-            <block template="Yireo_LokiCheckoutBuckaroo::script/hosted-fields-loader.phtml"/>
+            <block template="LokiCheckout_Buckaroo::script/hosted-fields-loader.phtml"/>
         </referenceContainer>
 
         <referenceContainer name="loki-components">
-            <block template="Yireo_LokiCheckoutBuckaroo::script/component/hosted-fields-component.phtml"/>
+            <block template="LokiCheckout_Buckaroo::script/component/hosted-fields-component.phtml"/>
         </referenceContainer>
     </body>
 </page>
