--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -3,6 +3,6 @@
     <body>
         <block
             name="loki-checkout.payment.payment-methods.buckaroo_magento2_creditcards.form"
-            template="Yireo_LokiCheckoutBuckaroo::checkout/payment/method/hosted-fields.phtml"/>
+            template="LokiCheckout_Buckaroo::checkout/payment/method/hosted-fields.phtml"/>
     </body>
 </page>
