--- a/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
+++ b/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
@@ -1,6 +1,8 @@
 <?php
 declare(strict_types=1);
 
+/** @version 2.0.0 */
+
 use Magento\Framework\View\Element\Template;
 use LokiCheckout\Buckaroo\Component\HostedFields\HostedFieldsViewModel;
 use Loki\Components\Util\Block\CssClass;
