Declare used PHP namespaces

--- a/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
+++ b/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
@@ -3,10 +3,12 @@ declare(strict_types=1);
 
 /** @version 2.0.0 */
 
+use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 use LokiCheckout\Buckaroo\Component\HostedFields\HostedFieldsViewModel;
 use Loki\Components\Util\Block\CssClass;
 
+/** @var Escaper $escaper */
 /** @var HostedFieldsViewModel $viewModel */
 /** @var Template $block */
 /** @var CssClass $css */
