--- a/view/frontend/templates/script/hosted-fields-loader.phtml
+++ b/view/frontend/templates/script/hosted-fields-loader.phtml
@@ -1,4 +1,8 @@
 <?php
 declare(strict_types=1);
+
+use Magento\Framework\View\Element\Template;
+
+/** @var Template $block */
 ?>
 <script src="https://hostedfields-externalapi.prod-pci.buckaroo.io/v1/sdk"></script>
