Replace LokiComponentsUtilBlockCssClass with LokiCssUtilsUtilCssClass

--- a/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
+++ b/view/frontend/templates/checkout/payment/method/hosted-fields.phtml
@@ -6,7 +6,7 @@ declare(strict_types=1);
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 use LokiCheckout\Buckaroo\Component\HostedFields\HostedFieldsViewModel;
-use Loki\Components\Util\Block\CssClass;
+use Loki\CssUtils\Util\CssClass;
 
 /** @var Escaper $escaper */
 /** @var HostedFieldsViewModel $viewModel */
