--- a/view/frontend/layout/loki_checkout.xml
+++ b/view/frontend/layout/loki_checkout.xml
@@ -6,6 +6,7 @@
         </referenceContainer>
 
         <referenceContainer name="loki-components">
+            <block template="LokiCheckout_Buckaroo::script/component/creditcard-component.phtml"/>
             <block template="LokiCheckout_Buckaroo::script/component/hosted-fields-component.phtml"/>
         </referenceContainer>
     </body>
