--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -2,6 +2,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:View/Layout:etc/page_configuration.xsd">
     <body>
         <block
+            name="loki-checkout.payment.payment-methods.buckaroo_magento2_creditcard.form"
+            template="LokiCheckout_Buckaroo::checkout/payment/method/creditcard.phtml"/>
+        <block
             name="loki-checkout.payment.payment-methods.buckaroo_magento2_creditcards.form"
             template="LokiCheckout_Buckaroo::checkout/payment/method/hosted-fields.phtml"/>
     </body>
