--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -4,6 +4,15 @@
         <block
             name="loki-checkout.payment.payment-methods.buckaroo_magento2_creditcard.form"
             template="LokiCheckout_Buckaroo::checkout/payment/method/creditcard.phtml"/>
+
+        <block
+            name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay.form"
+            template="LokiCheckout_Buckaroo::checkout/payment/method/afterpay.phtml"/>
+
+        <block
+            name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay2.form"
+            template="LokiCheckout_Buckaroo::checkout/payment/method/afterpay2.phtml"/>
+
         <block
             name="loki-checkout.payment.payment-methods.buckaroo_magento2_creditcards.form"
             template="LokiCheckout_Buckaroo::checkout/payment/method/hosted-fields.phtml"/>
