--- a/view/frontend/templates/checkout/payment/method/afterpay.phtml
+++ b/view/frontend/templates/checkout/payment/method/afterpay.phtml
@@ -1,10 +1,9 @@
 <?php
 declare(strict_types=1);
 
-/** @version 2.0.0 */
-
 use Loki\Components\Factory\ViewModelFactory;
-use Loki\Field\ViewModel\ImageOutput;
+use Loki\Components\Util\Block\BlockRenderer;
+use Loki\Field\Config\Config;
 use LokiCheckout\Buckaroo\Component\Afterpay\AfterpayViewModel;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
@@ -15,22 +14,28 @@ use Loki\CssUtils\Util\CssClass;
 /** @var CssClass $css */
 /** @var AfterpayViewModel $viewModel */
 /** @var ViewModelFactory $viewModelFactory */
-/** @var ImageOutput $imageOutput */
+/** @var BlockRenderer $blockRenderer */
+/** @var ViewModelFactory $viewModelFactory */
+/** @var Config $config */
 
+$config = $viewModelFactory->create(Config::class);
 ?>
 <div class="<?= /* @noEscape */
-$css('grid grid-cols-2 gap-4') ?>">
+$css('field required grid grid-cols-2 gap-4') ?>">
     <label
         for="<?= $escaper->escapeHtml($viewModel->getElementId() . '-customer-dob') ?>"
-        class="<?= /* @noScape */ $css('text-right', 'label') ?>"
+        class="<?= /* @noScape */ $css('inline-block mt-2 md:mt-0 mb-1.5 text-right required', 'label') ?>"
         required
     >
         <?= __('Date of Birth:') ?>
+        <?php if ($config->useRequiredBlock()): ?>
+            <?= /* @noEscape */ $blockRenderer->html($block, 'loki-field-components.utils.required'); ?>
+        <?php endif; ?>
     </label>
     <div>
         <input
             id="<?= $escaper->escapeHtml($viewModel->getElementId() . '-customer-dob') ?>"
-            class="<?= $css('', 'input') ?>"
+            class="<?= $css('form-input w-full disabled:bg-zinc-100', 'input') ?>"
             @change="saveCustomerDob"
             value="<?= $viewModel->getCustomerDob() ?>"
             type="date"
@@ -40,15 +45,18 @@ $css('grid grid-cols-2 gap-4') ?>">
 
     <label
         for="<?= $escaper->escapeHtml($viewModel->getElementId() . '-customer-iban') ?>"
-        class="<?= /* @noScape */ $css('text-right', 'label') ?>"
+        class="<?= /* @noScape */ $css('inline-block mt-2 md:mt-0 mb-1.5 text-right', 'label') ?>"
         required
     >
         <?= __('Bank Account Number:') ?>
+        <?php if ($config->useRequiredBlock()): ?>
+            <?= /* @noEscape */ $blockRenderer->html($block, 'loki-field-components.utils.required'); ?>
+        <?php endif; ?>
     </label>
     <div>
         <input
             id="<?= $escaper->escapeHtml($viewModel->getElementId() . '-customer-iban') ?>"
-            class="<?= $css('', 'input') ?>"
+            class="<?= $css('form-input w-full disabled:bg-zinc-100', 'input') ?>"
             @change="saveCustomerIban"
             value="<?= $viewModel->getCustomerIban() ?>"
             type="text"
@@ -58,15 +66,18 @@ $css('grid grid-cols-2 gap-4') ?>">
 
     <label
         for="<?= $escaper->escapeHtml($viewModel->getElementId() . '-terms-conditions') ?>"
-        class="<?= /* @noScape */ $css('text-right', 'label') ?>"
+        class="<?= /* @noScape */ $css('inline-block mt-2 md:mt-0 mb-1.5 text-right', 'label') ?>"
         required
     >
         <?= __('Terms and Conditions:') ?>
+        <?php if ($config->useRequiredBlock()): ?>
+            <?= /* @noEscape */ $blockRenderer->html($block, 'loki-field-components.utils.required'); ?>
+        <?php endif; ?>
     </label>
     <div class="<?= /* @noScape */ $css('', 'terms-container') ?>">
         <input
             id="<?= $escaper->escapeHtml($viewModel->getElementId() . '-terms-conditions') ?>"
-            class="<?= $css('', 'terms-input') ?>"
+            class="<?= $css('form-input w-full disabled:bg-zinc-100', 'terms-input') ?>"
             @change="saveTermsCondition"
             <?php if ($viewModel->getTermsCondition() === 1): ?>checked<?php endif; ?>
             type="checkbox"
@@ -79,6 +90,9 @@ $css('grid grid-cols-2 gap-4') ?>">
             required
         >
             <?= __('The general Terms and Conditions for the Riverty payment method apply. The privacy policy of Riverty can be found here.') ?>
+            <?php if ($config->useRequiredBlock()): ?>
+                <?= /* @noEscape */ $blockRenderer->html($block, 'loki-field-components.utils.required'); ?>
+            <?php endif; ?>
         </label>
 
         <div class="<?= /* @noScape */ $css('mt-4', 'terms-text') ?>">
