--- a/view/frontend/templates/checkout/sidebar/preview/payment_details/additional.phtml
+++ b/view/frontend/templates/checkout/sidebar/preview/payment_details/additional.phtml
@@ -15,7 +15,7 @@ if (empty($details)) {
     return;
 }
 ?>
-<dl>
+<dl class="grid grid-cols-2">
     <?php foreach ($details as $detailLabel => $detailValue): ?>
     <dt><?= /* @noEscape */ __($detailLabel) ?></dt>
     <dd><?= /* @noEscape */ $detailValue ?></dd>
