--- a/view/frontend/templates/script/component/afterpay-component.phtml
+++ b/view/frontend/templates/script/component/afterpay-component.phtml
@@ -8,8 +8,8 @@ use Magento\Framework\View\Element\Template;
 <script>
     document.addEventListener('alpine:init', () => {
         Alpine.data('LokiCheckoutBuckarooAfterpay', () => ({
-            ...LokiCheckoutComponentType,
-            saveCustomerIban(event) {
+            ...LokiFieldComponentType,
+            /*saveCustomerIban(event) {
                 this.post({
                     customerIban: event.target.value,
                 });
@@ -23,7 +23,7 @@ use Magento\Framework\View\Element\Template;
                 this.post({
                     termsCondition: event.target.checked ? 1 : 0,
                 });
-            }
+            }*/
         }));
     });
 </script>
