Add support for Alpine Mask config via XML layout

--- a/view/frontend/layout/loki_checkout_block_payment_methods.xml
+++ b/view/frontend/layout/loki_checkout_block_payment_methods.xml
@@ -22,6 +22,8 @@
                 name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay.form.iban" as="iban"
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
+                    <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
+                    <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
                     <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
@@ -53,6 +55,8 @@
                 name="loki-checkout.payment.payment-methods.buckaroo_magento2_afterpay2.form.iban" as="iban"
                 template="Loki_FieldComponents::form/field.phtml">
                 <arguments>
+                    <argument name="alpine_mask" xsi:type="string">aa99 **** **** **** **** **** **** **** **</argument>
+                    <argument name="placeholder" xsi:type="string">NL00 ABCD 0000 0000 0000 0000 0000 0000 00</argument>
                     <argument name="is_required" xsi:type="boolean">true</argument>
                 </arguments>
             </block>
